css/activities.css
/* ... */
#meterButtonsDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85);
}

#pdmDiv {
    position: absolute;
    top: 20%;
    left: 20%;
    background: rgba(255, 255, 255, 0.85) !important;
}

#pdmTableDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85) !important;
    width: 680px;
}

#pdmButtonsDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85);
}

#pdmOuterDiv {
    position: absolute;
    left: 0px;
    top: 0px;
    right: 5em;
    background: rgba(255, 255, 255, 0.85);
}

#pdmInnerDiv {
    overflow-x: auto;
    overflow-y: auto;
}

#mkbDiv {
    position: absolute;
    top: 0px;
    left: 0px;
    background: rgba(255, 255, 255, 0.85) !important;
}

#mkbKeyboardDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85) !important;
    width: 1020px;
}

#mkbTableDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85) !important;
    width: 1020px;
}

#mkbButtonsDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85);
}

#mkbOuterDiv {
    position: absolute;
    max-height: 400px;
    overflow-y: scroll;
    width: 100% !important;
    display: flex;
    left: 0px;
    top: 140px;
    right: 5em;
    background: rgba(255, 255, 255, 0.85);
}

#mkbInnerDiv {
    overflow-x: auto;
    margin-left: 0px;
}

#tempoDiv {
    position: absolute;
    top: 20%;
    left: 20%;
    background: rgba(255, 255, 255, 0.85) !important;
    user-select: none;
    -webkit-user-select: none;
}

#tempoButtonsDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85);
}

#right-arrow {
    right: 25px;
    background: url("../header-icons/right-arrow.png");
}

#left-arrow {
    left: 10px;
    background: url("../header-icons/left-arrow.png");
}

#left-arrow.disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

#right-arrow.disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

#playbackBtn.disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

#right-arrow,
#left-arrow {
    position: absolute;
    background-size: 40px;
    top: 195px;
    height: 40px;
    width: 40px;
}

.hover:hover {
    cursor: pointer;
}

@media (max-width: 600px) {
    #right-arrow,
    #left-arrow {
        height: 30px;
        width: 30px;
        background-size: 30px;
    }
}

@media (max-width: 450px) {
    #right-arrow,
    #left-arrow {
        height: 25px;
        width: 25px;
        background-size: 25px;
    }
}

@media (max-width: 320px) {
    #right-arrow,
    #left-arrow {
        height: 20px;
        width: 20px;
        background-size: 20px;
    }
}

.top-wrapper {
    width: 100%;
    position: absolute;
    top: 0;
    background: #2196f3;
    font-family: sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: #fff;
    font-size: 1.1em;
    text-align: center;
    height: 55px;
}

.close-button {
    position: absolute;
    font-size: 1em;
    right: 410px;
    width: 18px;
    height: 18px;
    background: url("../header-icons/close.png");
    background-size: 18px;
    cursor: pointer;
}

.drag-button {
    position: absolute;
    right: 20px;
    background: url("../header-icons/move.png");
    background-size: 22px;
    height: 22px;
    width: 22px;
    cursor: move;
}

#helpDiv h1 {
    text-align: left;
    padding-left: 30px;
    font-size: 1.5em;
}

#helpDiv p:first-child {
    padding-left: -10px;
}

#helpDiv p:not(:first-child) {
    text-align: left;
    padding-left: 30px;
    font-size: 0.9em;
    line-height: 20px;
}

#helpButtonsDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
}

#helpBodyDiv {
    position: relative;
    margin: 0 auto !important;
    left: 0 !important;
    border: 0 !important;
    overflow-x: hidden;
    overflow: visible;
    width: calc(100% - 130px) !important;
    max-width: 350px;
    padding: 1rem 1rem 0 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#helpScrollWrapper {
    overflow-y: auto;
}

#helpBodyDiv .heading,
#helpBodyDiv .description,
#helpBodyDiv .message {
    text-align: center;
    line-height: 1.2;
    margin: auto;
}

#helpBodyDiv a {
    color: #2196F3;
    text-decoration: underline;
    font-weight: 600;
    transition: color 0.2s ease;
}

#helpBodyDiv a:hover {
    color: #2b8be5;
}

#helpBodyDiv .icon-container {
    width: 30%;
    margin-top: 1.5rem;
    padding: 1px 1.2px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.icon-container #findIcon,
.icon-container #loadButton,
.icon-container #advIconText {
    transform: scale(1.2);
}

#helpBodyDiv .blockImage-wrapper {
    height: 90%;
    width: 100%;
}

#helpBodyDiv .blockImage {
    padding-top: 2rem;
    object-fit: contain;
    width: 100%;
    height: 100%;
}

@media (max-width: 600px) {
    #helpBodyDiv .icon-container {
        margin-top: 0;
        padding-top: 0;
    }

    .icon-container #findIcon,
    .icon-container #loadButton,
    .icon-container #advIconText {
        transform: scale(1.1);
    }
}

@media (max-width: 450px) {
    #helpBodyDiv {
        width: 240px;
    }
}

@media (max-width: 320px) {
    #helpBodyDiv {
        width: 200px;
    }
}

#pscDiv {
    position: absolute;
    top: 20%;
    left: 20%;
    background: rgba(255, 255, 255, 0.85) !important;
}

#pscTableDiv {
    position: relative;
    left: 0px;
    top: 0px;
    border: 0 !important;
    background: rgba(255, 255, 255, 0.85) !important;
    width: 680px;
}
/* ... */

